refactor: move explainability and incremental calculator (#2233)