@@ -89,19 +89,19 @@ public class TestdataLavishSolution extends TestdataObject {
     }
 
     public TestdataLavishValueGroup getFirstValueGroup() {
-        return valueGroupList.get(0);
+        return valueGroupList.getFirst();
     }
 
     public TestdataLavishValue getFirstValue() {
-        return valueList.get(0);
+        return valueList.getFirst();
     }
 
     public TestdataLavishEntityGroup getFirstEntityGroup() {
-        return entityGroupList.get(0);
+        return entityGroupList.getFirst();
     }
 
     public TestdataLavishEntity getFirstEntity() {
-        return entityList.get(0);
+        return entityList.getFirst();
     }
 
     // ************************************************************************
